kubernetes/chat-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: frontend
  template:
    metadata:
      labels:
        app: chat
        tier: frontend
    spec:
      containers:
      - name: chat-frontend
        image: localhost:5000/chat-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
          requests:
            memory: "256Mi"
            cpu: "100m"
