kubernetes/cms-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms-db
  template:
    metadata:
      labels:
        app: cms-db
    spec:
      containers:
      - name: mysql
        image: localhost:5000/mysql:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: cms-db-storage
      volumes:
      - name: cms-db-storage
        persistentVolumeClaim:
          claimName: cms-db-pvc
