kubernetes/chat-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend-service
  labels:
    app: chat
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8080        #Portul Service-ului în interiorul cluster-ului
    targetPort: 8080  #Portul containerului (Tomcat)
  selector:
    app: chat
    tier: backend
