kubernetes/chat-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-db
  labels:
    app: chat
    tier: db
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: chat
    tier: db
