kubernetes/chat-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend-service
  labels:
    app: chat
    tier: frontend
spec:
  type: ClusterIP       #Ingress pentru expunerea pe portul 90
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: chat
    tier: frontend
