kubernetes/cms-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-db-service
spec:
  selector:
    app: cms-db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
