kubernetes/cms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-service
spec:
  selector:
    app: cms
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
